# l10ns

./: .bowerrc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .npmignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CNAME  Cargo.toml  Gemfile  Gruntfile.js  LICENSE-MIT  Makefile  Program.cs  README.md  RELEASE.md  Readme.md  appveyor.yml  bower.json  circle.yml  component.json  docker-compose.yml  docs.html  globals.json  grunt.js  gt.json  help  index.html  index.js  l10ns.json  moment-timezone-utils.js  package-lock.json  package.json  project.json  prout  test  (+4 more)
.l10ns/: search.json
.sass-cache/19107d6943ad157d44978b1f73cc97f08f4af9b0/: _background.scssc  _functions.scssc  _grid.scssc  _margin.scssc  _media.scssc  _padding.scssc  _settings.scssc  _support.scssc  _units.scssc
.sass-cache/24fa9a973df0ff418873cc7bb75bddf3f37f3338/: _bullets.scssc  _horizontal-list.scssc  _inline-block-list.scssc  _inline-list.scssc
.sass-cache/37145812841b292fae734845850793b34395d81d/: _fonts.scssc  _margins.scssc  _misc.scssc  _paddings.scssc  _settings.scssc
.sass-cache/395cb21f55298db091188a19f499f3c4cbfc3040/: _hover-link.scssc  _link-colors.scssc  _unstyled-link.scssc
.sass-cache/426abf5b3a2efa0c24da8d1f49286ce51b209c92/: _stylewithclass.scssc
.sass-cache/46d39b17b64163c558ebdc1cca25eec5f3b567f3/: _ellipsis.scssc  _force-wrap.scssc  _nowrap.scssc  _replacement.scssc
.sass-cache/47bc3e79e5cf428e640b160a6ff691ab3903ebe8/: _reset.scssc  _support.scssc  _typography.scssc  _utilities.scssc
.sass-cache/572270916d8a1755bd582053c81723fd195c3ee2/: _contrast.scssc
.sass-cache/5a9213a7499eac53953b1dc09cb7cfa58d51c527/: _clearfix.scssc  _float.scssc  _hacks.scssc  _min.scssc  _reset.scssc  _tag-cloud.scssc
.sass-cache/5f7662065dcce1410165ddfe955efc9b7dc33769/: _color.scssc  _general.scssc  _sprites.scssc  _tables.scssc
.sass-cache/6952de80c87bf2be60b90e9fd987a903d47cb6ae/: _susy.scssc
.sass-cache/75640fff35f57825ee18f946c95ef10ad0cf8fc0/: _background-clip.scssc  _background-origin.scssc  _background-size.scssc  _border-radius.scssc  _box-shadow.scssc  _box-sizing.scssc  _images.scssc  _inline-block.scssc  _shared.scssc  _text-shadow.scssc
.sass-cache/7815a0ffb5af7fafa57710a179c4a353515a2ae5/: _links.scssc  _lists.scssc  _text.scssc  _vertical_rhythm.scssc
.sass-cache/8454c74d53d34bafd85e8e27d936dc81586c48e2/: _sassy-buttons.sassc
.sass-cache/89e6c6d452a6f92ae9c4e3611ead51cce4a6aa6c/: _base.scssc  _borders.scssc  _general.scssc  _menu.scssc  _regions.scssc  _translation_keys.scssc  _translation_values.scssc
.sass-cache/8cbc6a35d7de55fdef52bacb6192045387afc567/: _sassy-button-gradients.sassc  _sassy-button-pseudo-states.sassc  _sassy-button-shadows.sassc  _sassy-button-styles.sassc  _sassy-button-text.sassc
.sass-cache/8fb43f757b1fd98d88d0d2b0103d19da8f42b4c6/: _grid-background.scssc  _stretching.scssc
.sass-cache/928717f716b7357483cd89c938a244e1fd7e2fc7/: _utilities.scssc
.sass-cache/a6e37f731d41292de55e5f4b2dbbfd3589473954/: style.scssc
.sass-cache/a7ec7a7db804842bd64445eb991a428ff1a3e19c/: _base.scssc  _sprite-img.scssc
.sass-cache/abad20a2e2128ad615c5cc44b85d5e0e071bdee1/: %042.pngc
.sass-cache/b2e5b32c154e99635908d77831e2b9de58da0580/: _borders.scssc  _general.scssc  _menu.scssc  _regions.scssc
.sass-cache/d989e49895103167c5b936a0ff535c487c5ee048/: _alternating-rows-and-columns.scssc  _borders.scssc  _scaffolding.scssc
Binaries/: l10ns
Binary/: l10ns
IANA/: latest.json
Source/: Core.ts  Program.ts  System.ts  Types.ts
Source/Compiler/: Binary.cpp  CommandController.cpp  CommandLineParser.cs  CommandParser.cpp  Configurations.h  Program.cpp  Program.cs  Utils.cpp  l10ns.cpp  project.json  (+1 more)
Tasks/: AcceptBaseline.cpp  AcceptBaselines.ts  Clean.cpp  CommandOptions.ts  CompileSource.ts  CompileTasks.ts  CompileTests.ts  Diff.cpp  Diff.ts  GenerateDiagnostics.cpp  GenerateDiagnostics.ts  RunTests.ts
app/: App.js  config.rb  main.js  server.js
binaries/: gt  install-report.js  l10ns  spec  test  track.js
conf/: programConfig.js  programConfigs.js
configurations/: mostLikelyLanguageTagMapping.js  program.js  text.js
dockerdevimage/: Dockerfile
example/: example.js
images/: Logo.icns
interface/: page.js  server.js  start.js
language/: javascript.js
lib/: Search.js  _log.js  bootstrap.js  compiler.js  edit.js  file.js  index.js  init.js  log.js  mapper.js  merger.js  parser.js  search.js  syntax.js  translate.js  translations.js  update.js
libraries/: Lexer.js  _log.js  edit.js  file.js  index.js  init.js  log.js  merger.js  parser.js  search.js  set.js  syntax.js  update.js  utilities.js
specifications/: LDML.js  LDMLPlural.js  choiceFormat.js  currencyFormat.js  dateFormat.js  file.js  globals.js  index.js  init.js  log.js  messageFormat.js  numberFormat.js  numberSystem.js  pluralFormat.js  selectFormat.js  selectordinalFormat.js  sentences.js  update.js  variables.js
src/: CommandLineParser.cs  Search.js  bootstrap.js  compile.js  edit.js  index.js  log.js  main.cpp  main.rs  parse.js  translations.js  update.js
styles/: components.css  content.css  docs-content.css  docs-layout.css  home-content.css  home-layout.css  layout.css
tasks/: AcceptBaseline.cpp  Clean.cpp  Diff.cpp  DownloadCLDRData.cpp  GenerateDiagnostics.cpp  GenerateJsonRpcClientStub.cpp  build.js  data-collect.js  data-dedupe.js  data-download.js  data-meta.js  data-pack.js  data-tests.js  data-zdump.js  data-zic.js  data.js  translate.js  users.db
test/: file.js  index.js  jsCompiler.js  test-edit.js  test-file.js  test-init.js  test-js-compiler.js  test-log.js  test-merger.js  test-parser.js  test-search.js  test-syntax.js  test-update.js  translate_test.js  update.js
translation_interface/: server.js
(+1341 files in other folders)
